moved principles and advantages to workshop.org

--- a/workshop.org
+++ b/workshop.org
@@ -82,6 +82,44 @@ http://orgmode.org/org.html#Setting-tags
 
 - Course material is (or will be) online at [[https://github.com/novoid/org-mode-workshop][org-mode-workshop on github]]
 
+** Org-mode Principles and Advantages
+
+*** text files
+
+- text as the lowest common denominator
+- portable
+- future-proof
+- process it with grep, python, ...
+- VCS like git, Subversion, ...
+- easy synchronization
+- advanced search & replace everywhere
+- ...
+
+*** easy to learn
+
+- outliner (~5 minutes)
+- todo-management (~10 minutes)
+- GTD implementation (~15 minutes)
+- more and more advanced topics
+  - one by one
+  - depending on personal requirements
+
+*** scales
+
+- performance
+- learn/use only those parts you need
+
+*** wiki-like
+
+- personal knowledge-base
+- internal and external links
+- very open to external files, APIs, ...
+
+*** Meta-data
+
+- define as much as you need
+- you've got all possibilities
+
 ** Feature Show (my personal requirements)
 
 - Motivation
